@@ -14840,7 +14840,7 @@ filename if they are (still) empty:</property>
 				      </child>
 
 				      <child>
-					<widget class="GtkCheckButton" id="col_visible17">
+					<widget class="GtkCheckButton" id="col_visible27">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
 					  <property name="label" translatable="yes"></property>
@@ -14935,7 +14935,22 @@ filename if they are (still) empty:</property>
 				      </child>
 
 				      <child>
-					<placeholder/>
+					<widget class="GtkCheckButton" id="col_visible17">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="label" translatable="yes"></property>
+					  <property name="use_underline">True</property>
+					  <property name="relief">GTK_RELIEF_NORMAL</property>
+					  <property name="focus_on_click">True</property>
+					  <property name="active">False</property>
+					  <property name="inconsistent">False</property>
+					  <property name="draw_indicator">True</property>
+					</widget>
+					<packing>
+					  <property name="padding">0</property>
+					  <property name="expand">False</property>
+					  <property name="fill">False</property>
+					</packing>
 				      </child>
 				    </widget>
 				    <packing>
